[package]
name = "solana-hft-botx"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "botx"
path = "src/main.rs"

[dependencies]
# ── Solana ──────────────────────────────────────────────────────────────────
solana-client             = "1.18"
solana-sdk                = "1.18"
solana-transaction-status = "1.18"

# ── SPL ─────────────────────────────────────────────────────────────────────
spl-token                     = "4.0"
spl-associated-token-account  = "3.0"

# ── Async ───────────────────────────────────────────────────────────────────
tokio        = { version = "1", features = ["full"] }
futures-util = "0.3"

# ── Networking ───────────────────────────────────────────────────────────────
reqwest = { version = "0.11", features = ["json"] }

# ── Serialisation ────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bincode    = "1.3"
toml       = "0.8"

# ── Utilities ────────────────────────────────────────────────────────────────
dotenv   = "0.15"
bs58     = "0.5"
base64   = "0.21"
anyhow   = "1"
thiserror = "1"
chrono   = { version = "0.4", features = ["serde"] }
clap     = { version = "4", features = ["derive"] }
dashmap  = "5"

# ── Logging ──────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
